--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    
+
     <title>Music Player</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
+        integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
+    </script>
 </head>
+
 <body>
-    
+    <audio id="player" ontimeupdate="updateProgress()">
+        <source id="source">
+            Audio Not Supported
+    </audio>
+    <span id="currentlyPlayingSong"></span><em><span id="currentSong"></span></em>
+ 
+   <progress id="progress" value="0" max="100"></progress>
+   
+    <br>
+    <br>
+    <div id="controls">
+        <i class="far fa-play-circle fa-5x" onclick="playAudio()"></i>
+        <i class="far fa-pause-circle fa-5x" onclick="pauseAudio()"></i>
+        <p>Volume</p>
+        <i class="fas fa-volume-down"></i>
+        <input type="range" id="volumeSlider" min="0" max="1" step="0.01">
+        <i class="fas fa-volume-up"></i>
+    </div>
+
+    <br>
+    <h4>Pendulum - Hold Your Colour</h4>
+    <br>
+    <div id="songList">
+
+    </div>
+
+
+    <script src="assets/javascript/game.js"></script>
+
 </body>
 
 </html>
